can construct inner automorphism group